# AI_Article_Generator

./: .env  README.md  pyproject.toml  requirements.txt
data/: readme.md  sample_docs.txt
data/documents/: nlp_applications.txt  openai_api_guidelines.md
data/vectors/: index.faiss  index_metadata.json
knowledge/: user_preference.txt
notebooks/: 01_setup_and_data.ipynb  02_agents_and_tasks.ipynb
src/AI_Article_Generator/: __init__.py  crew.py  main.py
src/AI_Article_Generator/config/: agents.yaml  tasks.yaml
src/AI_Article_Generator/tools/: __init__.py  custom_tool.py
