[project]
name = "crew_automation_with_multi_ai_agents_for_article_generation"
version = "0.1.0"
description = "crew_automation_with_multi_ai_agents_for_article_generation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
crew_automation_with_multi_ai_agents_for_article_generation = "crew_automation_with_multi_ai_agents_for_article_generation.main:run"
run_crew = "crew_automation_with_multi_ai_agents_for_article_generation.main:run"
train = "crew_automation_with_multi_ai_agents_for_article_generation.main:train"
replay = "crew_automation_with_multi_ai_agents_for_article_generation.main:replay"
test = "crew_automation_with_multi_ai_agents_for_article_generation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
